fix(tui): enable native access in the JVM launcher
Vis-Session: 7fc50aa5-df83-4fa7-b3ec-73877dd8ad2f